feat: discoin claims
Signed-off-by: Chris Gianelloni <wolf31o2@blinklabs.io>

--- a/.env.example
+++ b/.env.example
@@ -29,10 +29,10 @@
 #LOG_TYPE=combined
 
 # Premium token fee (default: 500000)
-#TOSIFEE=500000
+#CLAIM_FEE=500000
 
 # Comma-separated list of stake pools which are not charged a premium fee (default: empty)
-#TOSIFEE_WHITELIST=pool104v7kzpq86r0wnfsz8r7jeld2raap92qq84trjcqk62zyh9akqt
+#CLAIM_FEE_WHITELIST=pool104v7kzpq86r0wnfsz8r7jeld2raap92qq84trjcqk62zyh9akqt
 
 # Access token for the Vending Machine API (required)
 #VM_API_TOKEN="CHANGEME"
