--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tosidrop-vm",
+  "name": "vm-frontend",
   "version": "1.2.0",
-  "description": "TosiDrop VM Frontend!",
+  "description": "VM Frontend!",
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"cd server && npm run start-dev\" \"cd client && npm start\"",
@@ -9,13 +9,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TosiDrop/vm-frontend.git"
+    "url": "git+https://github.com/blinklabs-io/discoin-vm-frontend.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/TosiDrop/vm-frontend/issues"
+    "url": "https://github.com/blinklabs-io/discoin-vm-frontend/issues"
   },
-  "homepage": "https://github.com/TosiDrop/vm-frontend#readme",
+  "homepage": "https://github.com/blinklabs-io/discoin-vm-frontend#readme",
   "devDependencies": {
     "concurrently": "^8.2.0"
   }
