--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -2,7 +2,7 @@ name: Docker CI
 
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     paths: [ 'Dockerfile','client/**','public/**','server/**','src/**','*.ts','*.json','.github/workflows/ci-docker.yml' ]
 
 env:
@@ -29,7 +29,7 @@ jobs:
         with:
           context: .
           push: false
-          tags: tosidrop:latest
+          tags: claim:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       # TEMP fix
@@ -59,7 +59,7 @@ jobs:
         with:
           context: .
           push: false
-          tags: tosidrop:latest
+          tags: claim:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       # TEMP fix
