--- a/.github/workflows/ci-js.yml
+++ b/.github/workflows/ci-js.yml
@@ -2,7 +2,7 @@ name: JavaScript CI
 
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     paths: [ 'client/**','server/**', 'src/**','*.ts','*.json','.github/workflows/ci-js.yml' ]
 
 jobs:
