--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tosidrop-client",
+  "name": "vm-client",
   "version": "1.0.0",
-  "description": "TosiDrop Frontend React App",
+  "description": "VM Frontend React App",
   "engines": {
     "node": ">=18",
     "npm": ">=9"
