--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -178,14 +178,14 @@ jobs:
             type=sha,enable=${{ !startsWith(github.ref, 'refs/tags/v') }},priority=300,format=long,prefix=
       - name: manifest
         run: docker manifest create ${{ steps.meta.outputs.tags }} --amend ${{ steps.meta.outputs.tags }}-amd64 --amend ${{ steps.meta.outputs.tags }}-arm64v8
-      - name: manifest-master
-        run: docker manifest create ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:master --amend ${{ steps.meta.outputs.tags }}-amd64 --amend ${{ steps.meta.outputs.tags }}-arm64v8
-        if: github.ref == 'refs/heads/master'
+      - name: manifest-main
+        run: docker manifest create ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main --amend ${{ steps.meta.outputs.tags }}-amd64 --amend ${{ steps.meta.outputs.tags }}-arm64v8
+        if: github.ref == 'refs/heads/main'
       - name: push
         run: docker manifest push ${{ steps.meta.outputs.tags }}
-      - name: push-master
-        run: docker manifest push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:master
-        if: github.ref == 'refs/heads/master'
+      - name: push-main
+        run: docker manifest push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main
+        if: github.ref == 'refs/heads/main'
 
   github-release:
     runs-on: ubuntu-latest
