chore(ansible): fix branch
Signed-off-by: Chris Gianelloni <wolf31o2@blinklabs.io>

--- a/.env.example
+++ b/.env.example
@@ -37,11 +37,11 @@
 # Access token for the Vending Machine API (required)
 #VM_API_TOKEN="CHANGEME"
 
-# Git branch to track and Docker image tag (default: master)
-#VM_BRANCH=master
+# Git branch to track and Docker image tag (default: main)
+#VM_BRANCH=main
 
 # Docker image tag (default: value of VM_BRANCH)
-#VM_IMAGE_TAG=master
+#VM_IMAGE_TAG=main
 
 # Port to run image under (default: 3000)
 #VM_PORT=3000
