feat: brand discoin
Signed-off-by: Chris Gianelloni <wolf31o2@blinklabs.io>

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "The Silk Toad Claims",
-    "short_name": "The Silk Toad Claims",
+    "name": "discoin claims",
+    "short_name": "discoin claims",
     "icons": [
         {
             "src": "logo-192x192.png",
