--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "@types/validator": "^13.11.1",
     "axios": "^0.26.0",
     "bech32-converting": "^1.0.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.17.3",
     "lodash": "^4.17.21",
@@ -36,6 +37,7 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/lodash": "^4.14.197",
     "nodemon": "^3.0.1"
