feat(server): allow disabling static client
Signed-off-by: Chris Gianelloni <wolf31o2@blinklabs.io>

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@
 # Pre-configured network name (default: preview)
 #CARDANO_NETWORK=mainnet
 
+# Enable serving client from server
+#CLAIM_ENABLED=false
+
 # Pre-shared Key header to gate VM API call for /healthz checking (optional)
 #CLOUDFLARE_PSK=
 
