--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -41,7 +41,7 @@ jobs:
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
   build-arm64:
-    runs-on: self-hosted
+    runs-on: ["self-hosted", "ARM64"]
     steps:
       - uses: actions/checkout@v2
       - name: qemu
