feat: support a native platform token (cherry-pick)
Signed-off-by: Chris Gianelloni <wolf31o2@blinklabs.io>

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,12 @@
 # Log output format for Express/morgan (default: dev)
 #LOG_TYPE=combined
 
+# Fee for native platform token (default: 500000)
+#NATIVE_TOKEN_FEE=500000
+
+# Native platform token (optional)
+#NATIVE_TOKEN_ID=5612bee388219c1b76fd527ed0fa5aa1d28652838bcab4ee4ee63197.446973636f696e
+
 # Premium token fee (default: 500000)
 #CLAIM_FEE=500000
 
