fix: fix linting
Signed-off-by: Ales Verbic <averbic@applause.com>

--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,6 +1,7 @@
 # Collections
 collections:
   - name: community.general
+  - name: community.docker
 # From Galaxy
 roles:
   - src: datadog.datadog
