--- a/.github/workflows/ci-ansible.yml
+++ b/.github/workflows/ci-ansible.yml
@@ -9,8 +9,8 @@ jobs:
   ansible:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: ansible-community/ansible-lint-action@v6
+      - uses: actions/checkout@v4
+      - uses: ansible/ansible-lint@v24.7.0
         with:
           args: "ansible"
       - run: 'echo "VM_TOKEN=foo" > .env'
