--- a/ansible/roles/vm_frontend/defaults/main.yml
+++ b/ansible/roles/vm_frontend/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-redis_enabled: false
+vm_frontend_redis_enabled: false
 vm_frontend_version: 'main'
 vm_frontend_image: 'ghcr.io/blinklabs-io/discoin-vm-frontend:{{ vm_frontend_version }}'
 vm_frontend_port: 3000
